// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ErrorMessage Component should allow displaying an error cause: error 1`] = `
<errormessage
  props="{
  "message": {},
  "children": []
}"
>
  <div
    aria-live="polite"
    class="fadein"
  >
    <div
      class="curiosity-error__link-row"
    >
      <button
        class="pf-v6-c-button pf-m-link curiosity-error__link"
        data-ouia-component-id="OUIA-Generated-Button-link-1"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        title="t(curiosity-view.error_debug, {"context":"return"})"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon pf-m-start"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </span>
        <span
          class="pf-v6-c-button__text"
        >
          t(curiosity-view.error_debug, {"context":"return"})
        </span>
      </button>
      <button
        class="pf-v6-c-button pf-m-link"
        data-ouia-component-id="OUIA-Generated-Button-link-2"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon pf-m-start"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M975.8,636.9 L870.9,741.8 L457.9,328.6 C452.1,322.8 445.4,319.9 437.9,319.9 C430.4,319.9 423.7,322.8 417.9,328.6 L328.8,417.7 C323,423.5 320.1,430.2 320.1,437.7 C320.1,445.2 323,451.9 328.8,457.7 L742,870.7 L636.9,975.8 C610.5,1002.2 619.4,1024 656.8,1024 L956,1024 C1014.5,1024 1024,1013.7 1024,955.9 L1024,656.7 C1023.9,619.4 1002.2,610.5 975.8,636.9 Z M128,128 L896,128 L896,361.7 C896.007942,370.182681 899.389907,378.313788 905.4,384.3 L996.7,475.6 C1006.8,485.7 1024,478.5 1024,464.3 L1024,22.7 C1024,16.1 1021.9,10.7 1017.6,6.4 C1013.3,2.1 1007.9,0 1001.3,0 L22.7,0 C16.1,0 10.7,2.1 6.4,6.4 C2.1,10.7 0,16.1 0,22.7 L0,1001.3 C0,1007.9 2.1,1013.3 6.4,1017.6 C10.7,1021.9 16.1,1024 22.7,1024 L463.4,1024 C469.862884,1023.98894 475.684489,1020.0908 478.156232,1014.11925 C480.627976,1008.14769 479.264428,1001.27548 474.7,996.7 L383.4,905.4 C377.413788,899.389907 369.282681,896.007942 360.8,896 L128,896 L128,128 Z"
            />
          </svg>
        </span>
        <span
          class="pf-v6-c-button__text"
        >
          t(curiosity-view.error, {"context":"download"})
        </span>
      </button>
    </div>
    <textarea
      class="curiosity-error__textarea"
      readonly=""
      rows="10"
    >
      [
  [
    "Lorem ipsum",
    "dolor sit"
  ]
]
    </textarea>
  </div>
</errormessage>
`;

exports[`ErrorMessage Component should display custom messages: messages 1`] = `
<div
  aria-live="polite"
  className="fadein"
>
  <div
    className="curiosity-error__link-row"
  />
  <EmptyState
    icon={[Function]}
    titleText={
      <Title
        headingLevel="h2"
        size="lg"
      >
        Lorem ipsum
      </Title>
    }
    variant="full"
  >
    <EmptyStateBody>
      Dolor sit
    </EmptyStateBody>
  </EmptyState>
</div>
`;

exports[`ErrorMessage Component should render a basic component: basic render 1`] = `
<div
  aria-live="polite"
  className="fadein"
>
  <div
    className="curiosity-error__link-row"
  />
  <EmptyState
    icon={[Function]}
    titleText={
      <Title
        headingLevel="h2"
        size="lg"
      >
        t(curiosity-view.error, {"context":"title","appName":"Subscription Watch"})
      </Title>
    }
    variant="full"
  >
    <EmptyStateBody>
      t(curiosity-view.error, {"context":"description"}, [object Object])
    </EmptyStateBody>
  </EmptyState>
</div>
`;
